Home page updated with eventEmmiter

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,7 +2,7 @@
     <app-nav [username]="username"></app-nav>
 
     <div class="container">
-        <app-tweet-form></app-tweet-form>
+        <app-tweet-form (tweeted)="addTweet($event)"></app-tweet-form>
         <app-tweet [tweet]="tweet" *ngFor="let tweet of tweets"></app-tweet>
     </div>
 </section>
