--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -6,3 +6,11 @@ section {
     height: 100%;
     padding-top: 6rem;
 }
+
+	
+.no-hidden{
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  visibility: visible;
+}
