--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,8 +1,10 @@
 <section>
     <app-nav [username]="username"></app-nav>
 
-    <div class="container">
+    <div class="container" infiniteScroll [infiniteScrollDistance]="2" (scrolled)="onScroll()">
         <app-tweet-form (tweeted)="addTweet($event)"></app-tweet-form>
         <app-tweet [tweet]="tweet" *ngFor="let tweet of tweets"></app-tweet>
+
+        <button [ngClass]="'no-hidden'" *ngIf="showGoUpButton" class="btn btn-dark" (click)="scrollTop()">GO UP</button>
     </div>
 </section>
