Admin dashboard to make CRUD on users, NGXS to handle the state of the admin dashboard

--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -1,1 +1,9 @@
-<p>Que tramas moreno!</p>
+<app-nav [username]="username"></app-nav>
+<div class="container">
+    <div class="row">
+        <div class="col-6">
+            <app-user-list></app-user-list>
+        </div>
+    </div>
+
+</div>
