User registration added to admin dashboard

--- a/src/app/components/admin/dashboard/dashboard.component.html
+++ b/src/app/components/admin/dashboard/dashboard.component.html
@@ -4,6 +4,9 @@
         <div class="col-6">
             <app-user-list></app-user-list>
         </div>
+        <div class="col-6">
+            <app-user-form></app-user-form>
+        </div>
     </div>
 
 </div>
